# JQAnywhere

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json  pyproject.toml  serverless.yml
.github/workflows/: continuous-integration.yml
examples/: jqanywhere.toml  simple_daily_allocation.py
serverless/notifications/: console.yml  mailmeow.yml  sns.yml
src/jqanywhere/: __init__.py  cli.py  config.py
src/jqanywhere/broker/: base.py  paper.py  remote_miniqmt.py  template.py
src/jqanywhere/data/: adata_provider.py  base.py  remote_miniqmt.py
src/jqanywhere/jqcompat/: __init__.py  api.py  globals.py  logging.py  query.py  types.py
src/jqanywhere/miniqmt_remote/: __init__.py  client.py
src/jqanywhere/notifications/: base.py  console.py  mailmeow.py  sns.py
src/jqanywhere/persistence/: base.py  dynamodb.py  memory.py
src/jqanywhere/runtime/: engine.py  factory.py  lambda_handler.py  loader.py  scheduler.py  state.py
src/jqdata/: __init__.py
src/jqfactor/: __init__.py
src/prettytable/: __init__.py
src/scipy/: __init__.py
src/scipy/stats/: __init__.py  linregress.py
src/talib/: __init__.py
tests/: test_adata_provider.py  test_cli_config_api.py  test_notifications.py  test_remote_miniqmt.py  test_runtime.py  test_scipy_compat.py
