[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jqanywhere"
version = "0.1.0"
description = "Run JoinQuant-style Python strategies on AWS-compatible infrastructure."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "JQAnywhere Contributors"}]
keywords = ["joinquant", "quant", "trading", "aws", "serverless"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "boto3>=1.34.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[project.scripts]
jqanywhere = "jqanywhere.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = ["E501"]
