[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "JQAnywhere"
version = "0.5.0"
description = "Run JoinQuant-style Python strategies on AWS-compatible infrastructure."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
authors = [{name = "JQAnywhere Contributors"}]
keywords = ["joinquant", "quant", "trading", "aws", "serverless"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "adata>=2.9.5",
  "boto3>=1.34.0",
  "numpy>=1.26.0",
  "pandas>=2.2.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "ruff>=0.4.0",
]

[project.scripts]
jqanywhere = "jqanywhere.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 140
target-version = "py313"
src = ["src", "tests", "examples"]
extend-exclude = ["private"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
docstring-code-format = true

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"examples/*.py" = ["F403", "F405"]
"src/jqanywhere/jqcompat/api.py" = ["F403", "F405"]
"src/jqdata/__init__.py" = ["F401", "F403"]

[tool.ruff.lint.isort]
known-first-party = ["jqanywhere", "jqdata"]
